--- a/webhook_manager_dialog.html
+++ b/webhook_manager_dialog.html
@@ -146,6 +146,8 @@
     .btn-secondary:hover { background-color: #5a6268; }
     .btn-refresh { background-color: #17a2b8; color: white; }
     .btn-refresh:hover { background-color: #117a8b; }
+    .btn-ai { background-color: #6f42c1; color: white; }
+    .btn-ai:hover { background-color: #5a32a3; }
 
     .message {
       margin-top: 20px;
@@ -209,7 +211,7 @@
                 <h3>Решение</h3>
                 <p id="statusSolution"></p>
             </div>
-            <div id="raw-data-section" class="info-section hidden">
+            <div id="raw-data-section" class="info-section">
                 <h3>Сырые данные от Telegram</h3>
                 <pre id="rawTelegramData"></pre>
             </div>
@@ -232,6 +234,7 @@
 
         <div class="button-group">
           <button class="btn btn-refresh" id="refreshBtn">Обновить</button>
+          <button class="btn btn-ai" id="aiAnalyzeBtn">Запустить AI-анализ</button>
           <button class="btn btn-primary" id="setWebhookBtn">Установить / Обновить</button>
           <button class="btn btn-danger" id="deleteWebhookBtn">Удалить</button>
           <button class="btn btn-secondary" id="closeDialogBtn">Закрыть</button>
@@ -262,17 +265,13 @@
     const deleteWebhookBtn = document.getElementById('deleteWebhookBtn');
     const closeDialogBtn = document.getElementById('closeDialogBtn');
     const refreshBtn = document.getElementById('refreshBtn');
+    const aiAnalyzeBtn = document.getElementById('aiAnalyzeBtn');
     const dialogMessage = document.getElementById('dialogMessage');
 
     // --- Global State ---
-    let autoUrl = '';
-    let editorUrl = '';
+    let basicInfo = {};
 
     // --- Functions ---
-
-    function logToServer(message) {
-        google.script.run.logFromClient(message);
-    }
 
     function showLoader(statusText) {
         loaderStatus.textContent = statusText;
@@ -292,7 +291,6 @@
 
     function updateStatusPanel(analysis) {
         statusPanel.className = 'status-panel'; // Reset classes
-        rawDataSection.classList.add('hidden');
         devLinksSection.classList.add('hidden');
 
         if (!analysis) {
@@ -312,48 +310,61 @@
         statusDetails.innerHTML = (analysis.details || 'Нет данных').replace(/\n/g, '<br>');
         statusSolution.innerHTML = (analysis.solution || 'Нет данных').replace(/\n/g, '<br>');
 
-        if (analysis.rawTelegramData) {
-            rawTelegramData.textContent = analysis.rawTelegramData;
-            rawDataSection.classList.remove('hidden');
-        }
-
         if (analysis.status !== 'OK') {
             devLinksSection.classList.remove('hidden');
-            gasEditorLink.href = editorUrl;
-            vscodeLink.href = `vscode://file/${editorUrl}`;
+            gasEditorLink.href = basicInfo.editorUrl;
+            vscodeLink.href = `vscode://file/${basicInfo.editorUrl}`;
         }
     }
 
-    function handleSuccess(response) {
-        logToServer("Server responded successfully.");
-        editorUrl = response.editorUrl;
-        autoUrl = response.webAppUrl;
-        autoWebAppUrlElem.textContent = autoUrl || "Не удалось определить";
-        updateStatusPanel(response.analysis);
-        deleteWebhookBtn.style.display = response.rawInfo && response.rawInfo.url ? 'inline-block' : 'none';
-        hideLoader();
-    }
-
-    function handleFailure(error) {
-        logToServer(`Client-side error: ${error.message}`);
+    function handleFailure(error, context) {
         const errorAnalysis = {
             status: 'CRITICAL',
-            summary: 'Критическая ошибка клиента',
-            details: `Произошла непредвиденная ошибка на стороне клиента, которая помешала связи с сервером. Ошибка: ${error.message}`,
+            summary: `Критическая ошибка: ${context}`,
+            details: `Произошла непредвиденная ошибка: ${error.message}`,
             solution: 'Эта ошибка для разработчика. Пожалуйста, используйте инструменты ниже для отладки. Проверьте консоль браузера (F12) на наличие красных ошибок.'
         };
         updateStatusPanel(errorAnalysis);
         hideLoader();
     }
 
-    function loadWebhookInfo() {
-        showLoader('Получение статуса вебхука...');
+    function loadBasicInfo() {
+        showLoader('Получение базовой информации от Telegram...');
         showMessage('', 'hidden');
-        logToServer("Calling getWebhookStatusForDialog...");
         google.script.run
-            .withSuccessHandler(handleSuccess)
-            .withFailureHandler(handleFailure)
-            .getWebhookStatusForDialog();
+            .withSuccessHandler(response => {
+                if (response.ok) {
+                    basicInfo = response;
+                    autoWebAppUrlElem.textContent = response.webAppUrl || "Не удалось определить";
+                    rawTelegramData.textContent = JSON.stringify(response.rawInfo, null, 2);
+                    deleteWebhookBtn.style.display = response.rawInfo && response.rawInfo.url ? 'inline-block' : 'none';
+                    statusPanel.classList.add('warning');
+                    statusIcon.textContent = '🤔';
+                    statusSummary.textContent = 'Требуется анализ';
+                    statusDetails.textContent = 'Базовая информация получена. Для получения рекомендаций запустите AI-анализ.';
+                    statusSolution.textContent = 'Нажмите кнопку \"Запустить AI-анализ\" ниже.';
+                } else {
+                    handleFailure(new Error(response.error), 'Получение базовой информации');
+                }
+                hideLoader();
+            })
+            .withFailureHandler(err => handleFailure(err, 'Получение базовой информации'))
+            .getBasicWebhookInfo();
+    }
+
+    function runAiAnalysis() {
+        showLoader('Запуск AI-анализа... Это может занять до 30 секунд.');
+        google.script.run
+            .withSuccessHandler(response => {
+                if (response.ok) {
+                    updateStatusPanel(response.analysis);
+                } else {
+                    updateStatusPanel(response.analysis); // Show warning from server
+                }
+                hideLoader();
+            })
+            .withFailureHandler(err => handleFailure(err, 'AI-анализ'))
+            .getAiAnalysis(basicInfo);
     }
 
     function handleAction(actionFunction, ...args) {
@@ -365,16 +376,16 @@
                 } else {
                     showMessage(`Ошибка: ${result.description || 'Неизвестная серверная ошибка.'}`, 'error');
                 }
-                loadWebhookInfo(); // Always reload
+                loadBasicInfo(); // Always reload basic info
             })
-            .withFailureHandler(handleFailure)
+            .withFailureHandler(err => handleFailure(err, 'Действие с вебхуком'))
             [actionFunction](...args);
     }
 
     // --- Event Listeners ---
     setWebhookBtn.addEventListener('click', () => {
       const manualUrl = manualWebhookUrlInput.value.trim();
-      const finalUrl = manualUrl || autoUrl;
+      const finalUrl = manualUrl || basicInfo.webAppUrl;
       if (!finalUrl) {
           showMessage('URL для установки не найден. Введите его вручную.', 'error');
           return;
@@ -383,13 +394,11 @@
     });
 
     deleteWebhookBtn.addEventListener('click', () => handleAction('deleteWebhookFromDialog'));
-    refreshBtn.addEventListener('click', loadWebhookInfo);
+    refreshBtn.addEventListener('click', loadBasicInfo);
+    aiAnalyzeBtn.addEventListener('click', runAiAnalysis);
     closeDialogBtn.addEventListener('click', () => google.script.host.close());
 
-    document.addEventListener('DOMContentLoaded', () => {
-        logToServer('Dialog opened and client script started.');
-        loadWebhookInfo();
-    });
+    document.addEventListener('DOMContentLoaded', loadBasicInfo);
   </script>
 </body>
 </html>
