--- a/webhook_manager_dialog.html
+++ b/webhook_manager_dialog.html
@@ -99,6 +99,14 @@
       margin-bottom: 10px;
       color: #343a40;
     }
+    .url-section code {
+        background-color: #e9ecef;
+        padding: 3px 6px;
+        border-radius: 4px;
+        word-break: break-all;
+        display: block;
+        margin-bottom: 15px;
+    }
     .url-section input[type="text"] {
         width: 100%;
         padding: 10px;
@@ -211,15 +219,14 @@
                 <h3>Инструменты разработчика</h3>
                 <div class="dev-links">
                     <a id="gas-editor-link" href="#" target="_blank">Открыть в Apps Script</a>
-                    <a id="vscode-link" href="#" target="_blank" style="display: none;">Открыть в VS Code</a>
                 </div>
             </div>
         </div>
 
         <div class="url-section">
             <strong>URL Веб-приложения</strong>
-            <p>Введите URL вашего развернутого веб-приложения:</p>
-            <input type="text" id="manualWebhookUrl" placeholder="https://script.google.com/macros/s/ваше_id/exec">
+            <p>Чтобы получить URL веб-приложения, следуйте <a href="https://developers.google.com/apps-script/guides/web#deploy_a_script_as_a_web_app" target="_blank">этой инструкции</a>. Скопируйте полученный URL и вставьте его в поле ниже.</p>
+            <input type="text" id="manualWebhookUrl" placeholder="Вставьте URL вашего веб-приложения сюда">
         </div>
 
         <div class="button-group">
@@ -248,7 +255,6 @@
     const rawTelegramData = document.getElementById('rawTelegramData');
     const devLinksSection = document.getElementById('dev-links-section');
     const gasEditorLink = document.getElementById('gas-editor-link');
-    const vscodeLink = document.getElementById('vscode-link');
     const manualWebhookUrlInput = document.getElementById('manualWebhookUrl');
     const setWebhookBtn = document.getElementById('setWebhookBtn');
     const deleteWebhookBtn = document.getElementById('deleteWebhookBtn');
@@ -264,8 +270,8 @@
 
     function showLoader(statusText) {
         loaderStatus.textContent = statusText;
-        mainContent.classList.add('hidden');
         loader.classList.remove('hidden');
+        mainContent.classList.add('hidden');
     }
 
     function hideLoader() {
@@ -280,7 +286,8 @@
 
     function updateStatusPanel(analysis) {
         statusPanel.className = 'status-panel'; // Reset classes
-        
+        devLinksSection.classList.add('hidden');
+
         if (!analysis) {
             analysis = { status: 'CRITICAL', summary: 'Критическая ошибка клиента', details: 'Не удалось обработать ответ от сервера.', solution: 'Проверьте логи выполнения и консоль браузера.' };
         }
@@ -298,15 +305,9 @@
         statusDetails.innerHTML = (analysis.details || 'Нет данных').replace(/\n/g, '<br>');
         statusSolution.innerHTML = (analysis.solution || 'Нет данных').replace(/\n/g, '<br>');
 
-        devLinksSection.classList.remove('hidden');
-        if (basicInfo.editorUrl) {
+        if (analysis.status !== 'OK') {
+            devLinksSection.classList.remove('hidden');
             gasEditorLink.href = basicInfo.editorUrl;
-        }
-        if (basicInfo.localPath) {
-            vscodeLink.href = `vscode://file/${basicInfo.localPath}`;
-            vscodeLink.style.display = 'inline-block';
-        } else {
-            vscodeLink.style.display = 'none';
         }
     }
 
@@ -326,64 +327,51 @@
         showMessage('', 'hidden');
         google.script.run
             .withSuccessHandler(response => {
-                hideLoader();
                 if (response.ok) {
                     basicInfo = response;
-                    manualWebhookUrlInput.value = response.rawInfo.url || '';
                     rawTelegramData.textContent = JSON.stringify(response.rawInfo, null, 2);
                     deleteWebhookBtn.style.display = response.rawInfo && response.rawInfo.url ? 'inline-block' : 'none';
-                    
-                    const initialAnalysis = {
-                        status: 'WARNING',
-                        summary: 'Требуется анализ',
-                        details: 'Базовая информация получена. Для получения рекомендаций запустите AI-анализ.',
-                        solution: 'Нажмите кнопку "Запустить AI-анализ" ниже.'
-                    };
-                    updateStatusPanel(initialAnalysis);
-
+                    statusPanel.classList.add('warning');
+                    statusIcon.textContent = '🤔';
+                    statusSummary.textContent = 'Требуется анализ';
+                    statusDetails.textContent = 'Базовая информация получена. Для получения рекомендаций запустите AI-анализ.';
+                    statusSolution.textContent = 'Нажмите кнопку \"Запустить AI-анализ\" ниже.';
                 } else {
                     handleFailure(new Error(response.error), 'Получение базовой информации');
                 }
+                hideLoader();
             })
             .withFailureHandler(err => handleFailure(err, 'Получение базовой информации'))
             .getBasicWebhookInfo();
     }
 
     function runAiAnalysis() {
-        const manualUrl = manualWebhookUrlInput.value.trim();
-        if (!manualUrl) {
-            showMessage('URL для анализа не найден. Введите его вручную.', 'error');
-            return;
-        }
         showLoader('Запуск AI-анализа... Это может занять до 30 секунд.');
         google.script.run
             .withSuccessHandler(response => {
-                hideLoader();
                 if (response.ok) {
                     updateStatusPanel(response.analysis);
                 } else {
-                    updateStatusPanel(response.analysis); 
+                    updateStatusPanel(response.analysis); // Show warning from server
                 }
+                hideLoader();
             })
             .withFailureHandler(err => handleFailure(err, 'AI-анализ'))
-            .getAiAnalysis({ ...basicInfo, webAppUrl: manualUrl });
+            .getAiAnalysis(basicInfo);
     }
 
     function handleAction(actionFunction, ...args) {
         showLoader('Выполнение операции на сервере...');
         google.script.run
             .withSuccessHandler(result => {
-                hideLoader();
                 if (result.ok) {
-                    showMessage('Операция успешно выполнена! Нажмите "Обновить", чтобы увидеть актуальный статус.', 'success');
+                    showMessage('Операция успешно выполнена! Перезагружаю статус...', 'success');
                 } else {
                     showMessage(`Ошибка: ${result.description || 'Неизвестная серверная ошибка.'}`, 'error');
                 }
+                loadBasicInfo(); // Always reload basic info
             })
-            .withFailureHandler(err => {
-                hideLoader(); 
-                handleFailure(err, 'Действие с вебхуком');
-            })
+            .withFailureHandler(err => handleFailure(err, 'Действие с вебхуком'))
             [actionFunction](...args);
     }
 
